# phishing-email-triage-analyzer

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  scan.bat  scan.ps1
.github/workflows/: ci.yml
docs/: DETECTIONS.md  FINDINGS.md  SETUP.md
phishtriage/: __init__.py  auth.py  cli.py  domains.py  enrichment.py  indicators.py  parser.py  report.py  rules.yaml  scoring.py
reports/: SUMMARY.md  benign-internal-it.report.html  benign-internal-it.report.json  benign-internal-it.report.md  benign-newsletter.report.html  benign-newsletter.report.json  benign-newsletter.report.md  phish-bec-ceo-wire.report.html  phish-bec-ceo-wire.report.json  phish-bec-ceo-wire.report.md  phish-credential-harvest.report.html  phish-credential-harvest.report.json  phish-credential-harvest.report.md  phish-invoice-malware.report.html  phish-invoice-malware.report.json  phish-invoice-malware.report.md  phish-package-delivery.report.html  phish-package-delivery.report.json  phish-package-delivery.report.md  phish-prize-scam.report.html  phish-prize-scam.report.json  phish-prize-scam.report.md  ✓ A new rate is here.report.html  ✓ A new rate is here.report.json  ✓ A new rate is here.report.md
samples/: README.md  benign-internal-it.eml  benign-newsletter.eml  phish-bec-ceo-wire.eml  phish-credential-harvest.eml  phish-invoice-malware.eml  phish-package-delivery.eml  phish-prize-scam.eml
tests/: test_phishtriage.py
